--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
         <div class="two-columns__main-text">
           <p class=" two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-          <span class="two-columns__span-accent">Вывод:</span><span class="two-columns__paragraph">Учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</span>
+          <span class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</span>
           <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
         </div>
       </div>
@@ -76,7 +76,7 @@
       <p class="feynman__subtitle">Выучить и не забыть.</p>
       <a class="feynman__link" href="#">Подробнее →</a>
       <div class="feynman__pic">
-        <image src="./images/feynman.png" alt="feynman">
+        <image src="./images/feynman.png" alt="feynman"></image>
       </div>
     </section>
     <section class="kaufman">
