--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link" href="#"> Узнать →</a></p>
       </div>
         <div>
-        <image class="header__main-illustration" src="./images/header-image.png" alt="main-illustration"></image>
+        <image class="header__main-illustration" src="./images/header-image.png" alt="Картина"></image>
       </div>
       <div class="header__square-pic"></div>
     </header>
@@ -76,7 +76,7 @@
       <p class="feynman__subtitle">Выучить и не забыть.</p>
       <a class="feynman__link" href="#">Подробнее →</a>
       <div class="feynman__pic">
-        <image src="./images/feynman.png" alt="feynman"></image>
+        <image src="./images/feynman.png" alt="Фейнман"></image>
       </div>
     </section>
     <section class="kaufman">
@@ -124,7 +124,7 @@
           <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
         </div>
       </div>
-        <image class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="kaufman-triangle"></image>
+        <image class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Треугольник"></image>
     </section>
     </div>
 
