--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="header__square-pic"></div>
     </header> <!--Конец шапки страницы-->
-    <main class="content"> <!--Основное содержимое-->
+    <main> <!--Основное содержимое-->
       <section class="description"> <!--Секция description-->
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
@@ -76,7 +76,7 @@
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a class="feynman__link" href="#">Подробнее →</a>
         <div class="feynman__pic">
-          <img src="./images/feynman.png" alt="Фейнман">
+          <img src="./images/feynman.png" alt="Фотография Фейнмана">
         </div>
       </section> <!--Конец секции-->
       <section class="kaufman"> <!--Секция Кауфман-->
@@ -124,7 +124,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-          <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Треугольник">
+          <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Синий треугольник">
       </section> <!--Конец секции-->
     </main> <!--Конец основного содержимого сайта-->
     <footer class="footer"> <!--Подвал сайта-->
