--- a/index.html
+++ b/index.html
@@ -10,25 +10,21 @@
 <body>
   <div class="page">
     <header class="header"> <!--Шапка страницы-->
-      <img class="header__logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+      <img class="header__logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
-      <div class="header__subtitle">
-        <p>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link" href="#"> Узнать →</a></p>
-      </div>
-        <div>
-        <img class="header__main-illustration" src="./images/header-image.png" alt="Картина Снова Двойка">
-      </div>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать →</a></p>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Картина Снова Двойка">
       <div class="header__square-pic"></div>
     </header> <!--Конец шапки страницы-->
     <main> <!--Основное содержимое-->
       <section class="description"> <!--Секция description-->
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class=" two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <span class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</span>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
-          </div>
+          </article>
         </div>
       </section> <!--Конец секции-->
       <section class="digits"> <!--Секция digits-->
@@ -75,13 +71,11 @@
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a class="feynman__link" href="#">Подробнее →</a>
-        <div class="feynman__pic">
-          <img src="./images/feynman.png" alt="Фотография Фейнмана">
-        </div>
+        <img class="feynman__pic" src="./images/feynman.png" alt="Фотография Фейнмана">
       </section> <!--Конец секции-->
       <section class="kaufman"> <!--Секция Кауфман-->
-        <h2 class="section-title_theme_dark">Принципы обучения</h2>
-        <p class="section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="table">
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -124,33 +118,29 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-          <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Синий треугольник">
+          <div class="kaufman__triangle"></div>
       </section> <!--Конец секции-->
     </main> <!--Конец основного содержимого сайта-->
     <footer class="footer"> <!--Подвал сайта-->
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
-            <img class="header__logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикума">
-            <a  class="footer__author">© Виктор Абанькин</a>
+        <div class="footer__column footer__column_content_copyright">
+            <img class="header__logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикума">
+            <adress  class="footer__author">© Виктор Абанькин</adress>
         </div>
-        <div class="footer__column_content_info">
-          <a class="footer__column-heading" href="#">О Практикуме</a>
-          <a class="footer__column-links" href="#">Главная Концепции Наставники</a>
+        <div class="footer__column footer__column_content_info">
+          <h3 class="footer__column-heading">О Практикуме</h3>
+          <nav class="footer__column-links">
+            <a class="footer__column-link" href="#">Главная</a>
+            <a class="footer__column-link" href="#">Концепции</a>
+            <a class="footer__column-link" href="#">Наставники</a>
+          </nav>
         </div>
         <div class="footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <div class="footer__social-element">
-            <img class="social-icon" src="./images/facebook_color_white.svg" alt="Логотип Фейсбук">
-            <a class="footer__column-link" href="#">Facebook</a>
-          </div>
-          <div class="footer__social-element">
-            <img class="social-icon" src="./images/vk_color_white.svg" alt="Логотип ВКонтаке">
-            <a class="footer__column-link" href="#">ВКонтакте</a>
-          </div>
-          <div class="footer__social-element">
-            <img class="social-icon" src="./images/instagram_color_white.svg" alt="Логотип Инстаграм">
-            <a class="footer__column-link" href="#">Instagram</a>
-          </div>
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Логотип Фейсбук">Facebook</a>
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Логотип ВКонтаке">ВКонтакте</a>
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Логотип Инстаграм">Instagram</a>
+
         </div>
       </div>
     </footer> <!--Конец подвала сайта-->
