--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header"> <!--Шапка страницы-->
-      <img class="header__logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+      <img class="logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать →</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Картина Снова Двойка">
@@ -19,7 +19,7 @@
     <main> <!--Основное содержимое-->
       <section class="description"> <!--Секция description-->
         <article class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class=" two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
@@ -124,7 +124,7 @@
     <footer class="footer"> <!--Подвал сайта-->
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-            <img class="header__logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикума">
+            <img class="logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикума">
             <adress  class="footer__author">© Виктор Абанькин</adress>
         </div>
         <div class="footer__column footer__column_content_info">
@@ -137,10 +137,11 @@
         </div>
         <div class="footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
+          <nav class="footer__column-links">
             <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Логотип Фейсбук">Facebook</a>
             <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Логотип ВКонтаке">ВКонтакте</a>
             <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Логотип Инстаграм">Instagram</a>
-
+          </nav>
         </div>
       </div>
     </footer> <!--Конец подвала сайта-->
