--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header"> <!--Шапка страницы-->
-      <img class="logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать →</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Картина Снова Двойка">
@@ -124,7 +124,7 @@
     <footer class="footer"> <!--Подвал сайта-->
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-            <img class="logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикума">
+            <div class="logo logo_place_footer"></div>
             <adress  class="footer__author">© Виктор Абанькин</adress>
         </div>
         <div class="footer__column footer__column_content_info">
