--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./pages/how-to-learn.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header"> <!--Шапка страницы-->
-      <img class="header__logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать →</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Картина Снова Двойка">
@@ -26,6 +26,59 @@
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </article>
         </div>
+      </section> <!--Конец секции-->
+      <section class="techniques"> <!--Секция techniques-->
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <div class="cards">
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png" alt="Книга">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png" alt="Статуя">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="Интерливинг">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png" alt="Комната">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png" alt="Рука держит книгу">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>
+        </div>
+      </section><!--Конец секции-->
+      <section class="video"><!--Секция video-->
+        <h2 class="section-title">Видео на TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section><!--Конец секции-->
+      <section class="oakley"> <!--Секция oakley-->
+        <article class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </article>
+      </section> <!--Конец секции-->
+      <section class="feynman"> <!--Секция Фейнман-->
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a class="feynman__link" href="#">Подробнее →</a>
+        <img class="feynman__pic" src="./images/feynman.png" alt="Фотография Фейнмана">
       </section> <!--Конец секции-->
       <section class="digits"> <!--Секция digits-->
         <h2 class="section-title">Цифры и факты</h2>
@@ -67,11 +120,21 @@
           </div>
         </div>
       </section> <!--Конец секции-->
-      <section class="feynman"> <!--Секция Фейнман-->
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link" href="#">Подробнее →</a>
-        <img class="feynman__pic" src="./images/feynman.png" alt="Фотография Фейнмана">
+      <section class="khan"> <!--Секция khan-->
+        <div class="khan__container">
+          <adress class="khan__author">Салман Хан</adress>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <adress class="khan__quote-author">Джордж Лукас</adress>
+          <p class="khan__quote-authore-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <div class="khan__book-pic">
+              <img src="./blocks/khan/__book-pic/khan-book.jpg" alt="Книга Хана">
+            </div>
+            <!--<img class="khan__book-pic" src="../how-to-learn/images/khan-book.jpg" alt="Книга"> Пытался сделать картинку через тег img, но она растягивалась. overflow не помогало. Решил сделать через div (выше), но атрибут alt нельзя ж для дива добавлять. Оставил тут на всякий случай.-->
+            <a class="khan__buy-link" href="#">Купить книгу →</a>
+          </div>
+        </div>
       </section> <!--Конец секции-->
       <section class="kaufman"> <!--Секция Кауфман-->
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -120,11 +183,29 @@
         </div>
           <div class="kaufman__triangle"></div>
       </section> <!--Конец секции-->
+      <section class="resources"> <!--Секция resources-->
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a class="resources__link" href="#">
+            <img src="./blocks/resources/logo/resources-arzamas.svg">
+          </a>
+          <a class="resources__link" href="#">
+            <img src="./blocks/resources/logo/resources-n1.svg">
+          </a>
+          <a class="resources__link" href="#">
+            <img src="./blocks/resources/logo/resources-strelka.svg">
+          </a>
+          <a class="resources__link" href="#">
+            <img src="./blocks/resources/logo/resources-polka.svg">
+          </a>
+      </div>
+      </section><!--Конец секции-->
     </main> <!--Конец основного содержимого сайта-->
     <footer class="footer"> <!--Подвал сайта-->
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-            <img class="header__logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикума">
+            <div class="logo logo_place_footer"></div>
             <adress  class="footer__author">© Виктор Абанькин</adress>
         </div>
         <div class="footer__column footer__column_content_info">
