sprint-2 валидатор+README.md

--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
       </section> <!--Конец секции-->
       <section class="khan"> <!--Секция khan-->
         <div class="khan__container">
-          <adress class="khan__author">Салман Хан</adress>
+          <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
           <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-          <adress class="khan__quote-author">Джордж Лукас</adress>
+          <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-authore-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <div class="khan__book-pic">
@@ -188,16 +188,16 @@
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
           <a class="resources__link" href="#">
-            <img src="./blocks/resources/logo/resources-arzamas.svg">
+            <img src="./blocks/resources/logo/resources-arzamas.svg" alt="Ресурс Arzamas">
           </a>
           <a class="resources__link" href="#">
-            <img src="./blocks/resources/logo/resources-n1.svg">
+            <img src="./blocks/resources/logo/resources-n1.svg" alt="Ресурс N+1">
           </a>
           <a class="resources__link" href="#">
-            <img src="./blocks/resources/logo/resources-strelka.svg">
+            <img src="./blocks/resources/logo/resources-strelka.svg" alt="Ресурс Стрелка">
           </a>
           <a class="resources__link" href="#">
-            <img src="./blocks/resources/logo/resources-polka.svg">
+            <img src="./blocks/resources/logo/resources-polka.svg" alt="Ресурс Полка">
           </a>
       </div>
       </section><!--Конец секции-->
