--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <a class="footer__column-link" href="#">Наставники</a>
           </nav>
         </div>
-        <div class="footer__column_content_social">
+        <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <nav class="footer__column-links">
             <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Логотип Фейсбук">Facebook</a>
