--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
             <div class="logo logo_place_footer"></div>
-            <span  class="footer__author">© Виктор Абанькин</span>
+            <span  class="footer__author">© Егор Кириенко</span>
         </div>
         <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
